--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Microservices
-spring.datasource.url=jdbc:mysql://localhost:3306/microservicesproj
+spring.datasource.url=jdbc:mysql://localhost:3306/microservices
 spring.datasource.username=root
 spring.datasource.password=priya0103
 spring.jpa.hibernate.ddl-auto=update
