--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
              <version>4.0.1</version> <!-- Or the appropriate version -->
              <scope>provided</scope>
          </dependency>
+         
+         <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-mail</artifactId>
+         </dependency>
+
          <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
