--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-mail</artifactId>
          </dependency>
+         <dependency>
+                 <groupId>org.mockito</groupId>
+                 <artifactId>mockito-core</artifactId>
+                 <scope>test</scope>
+          </dependency>
 
          <dependency>
                <groupId>ch.qos.logback</groupId>
